Update image sources to use logo directory

--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@ a:hover{opacity:.9}
 /* Footer */
 footer{background:var(--ccn-night); color:white}
 </style>
-<link rel="icon" type="image/png" href="assets/images/ccn_favicon.png"/>
+<link rel="icon" type="image/png" href="logo/ccn_favicon.png"/>
 <!-- CCN THEME END -->
 
 </head>
@@ -426,7 +426,7 @@ footer{background:var(--ccn-night); color:white}
 <div class="container nav">
 <div class="brand">
 <!-- IMPORTANT: place le fichier dans le même dossier que cette page -->
-<img alt="Conciergerie Cabo Negro" onerror="this.style.display='none'" src="assets/images/ccn_transparent.png"/>
+<img alt="Conciergerie Cabo Negro" onerror="this.style.display='none'" src="logo/ccn_transparent.png"/>
 <!-- <span>Conciergerie Cabo Negro</span> -->
 </div>
 <nav>
@@ -510,21 +510,21 @@ footer{background:var(--ccn-night); color:white}
 <div class="marquee">
 <div class="track">
 <!-- Duplique le bloc ci-dessous pour allonger la boucle -->
-<img alt="Airbnb" class="brand" src="assets/images/ccn_transparent.png"/>
-<img alt="Booking" class="brand" src="assets/images/ccn_transparent.png"/>
-<img alt="Expedia" class="brand" src="assets/images/ccn_transparent.png"/>
-<img alt="Vrbo" class="brand" src="assets/images/ccn_transparent.png"/>
-<img alt="Google Travel" class="brand" src="assets/images/ccn_transparent.png"/>
-<img alt="Airbnb" class="brand" src="assets/images/ccn_transparent.png"/>
-<img alt="Booking" class="brand" src="assets/images/ccn_transparent.png"/>
-<img alt="Expedia" class="brand" src="assets/images/ccn_transparent.png"/>
-<img alt="Vrbo" class="brand" src="assets/images/ccn_transparent.png"/>
-<img alt="Google Travel" class="brand" src="assets/images/ccn_transparent.png"/>
-<img alt="Airbnb" class="brand" src="assets/images/ccn_transparent.png"/>
-<img alt="Booking" class="brand" src="assets/images/ccn_transparent.png"/>
-<img alt="Expedia" class="brand" src="assets/images/ccn_transparent.png"/>
-<img alt="Vrbo" class="brand" src="assets/images/ccn_transparent.png"/>
-<img alt="Google Travel" class="brand" src="assets/images/ccn_transparent.png"/>
+<img alt="Airbnb" class="brand" src="https://upload.wikimedia.org/wikipedia/commons/6/69/Airbnb_Logo_Bélo.svg"/>
+<img alt="Booking" class="brand" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/50/Booking.com_Logo_Grey.svg/1200px-Booking.com_Logo_Grey.svg.png"/>
+<img alt="Expedia" class="brand" src="https://cdn.freebiesupply.com/logos/large/2x/expedia-logo-black-and-white.png"/>
+<img alt="Vrbo" class="brand" src="https://www.logo.wine/a/logo/Vrbo/Vrbo-Logo.wine.svg"/>
+<img alt="Google Travel" class="brand" src="https://cdn.worldvectorlogo.com/logos/google-travel.svg"/>
+<img alt="Airbnb" class="brand" src="https://upload.wikimedia.org/wikipedia/commons/6/69/Airbnb_Logo_Bélo.svg"/>
+<img alt="Booking" class="brand" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/50/Booking.com_Logo_Grey.svg/1200px-Booking.com_Logo_Grey.svg.png"/>
+<img alt="Expedia" class="brand" src="https://cdn.freebiesupply.com/logos/large/2x/expedia-logo-black-and-white.png"/>
+<img alt="Vrbo" class="brand" src="https://www.logo.wine/a/logo/Vrbo/Vrbo-Logo.wine.svg"/>
+<img alt="Google Travel" class="brand" src="https://cdn.worldvectorlogo.com/logos/google-travel.svg"/>
+<img alt="Airbnb" class="brand" src="https://upload.wikimedia.org/wikipedia/commons/6/69/Airbnb_Logo_Bélo.svg"/>
+<img alt="Booking" class="brand" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/50/Booking.com_Logo_Grey.svg/1200px-Booking.com_Logo_Grey.svg.png"/>
+<img alt="Expedia" class="brand" src="https://cdn.freebiesupply.com/logos/large/2x/expedia-logo-black-and-white.png"/>
+<img alt="Vrbo" class="brand" src="https://www.logo.wine/a/logo/Vrbo/Vrbo-Logo.wine.svg"/>
+<img alt="Google Travel" class="brand" src="https://cdn.worldvectorlogo.com/logos/google-travel.svg"/>
 </div>
 </div>
 </section>
@@ -648,7 +648,7 @@ footer{background:var(--ccn-night); color:white}
 <footer>
 <div class="container footer-grid">
 <div>
-<div class="brand"><img alt="" onerror="this.style.display='none'" src="assets/images/ccn_transparent.png"/> <strong>Conciergerie Cabo Negro</strong></div>
+<div class="brand"><img alt="" onerror="this.style.display='none'" src="logo/ccn_transparent.png"/> <strong>Conciergerie Cabo Negro</strong></div>
 <p style="max-width:520px">Service de conciergerie spécialisé dans la gestion de propriétés locatives à Cabo Negro. Maximisez vos revenus en toute sérénité.</p>
 <div class="footer-actions">
 <a class="btn-ghost wa-link" href="https://wa.me/212665889233">🟢 WhatsApp</a>
