Update hero background image to a new format

--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@ footer{background:var(--ccn-night); color:white}
 </div>
 </header>
 <section class="hero ccn-hero" style="position:relative;min-height:72vh;display:grid;align-items:end">
-<img alt="Cabo Negro éco‑cité" class="hero-bg" src="caboshots/29943188984_601b3c2046.jpg">
+<img alt="Cabo Negro éco‑cité" class="hero-bg" src="caboshots/7137dc457506513a578d744fe2909f99.webp">
 <div class="hero-overlay"></div>
 <div class="container" style="position:relative;z-index:2;padding-bottom:clamp(32px,8vw,72px)">
 <span class="pill reveal">Service premium à Cabo Negro</span>
