Fix location placeholder and update contact email
Updated the placeholder text for the location input and corrected the email address in the contact section.

--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@ footer{background:var(--ccn-night); color:white}
 </div>
 <div class="row">
 <div><label>Téléphone *</label><input name="phone" required=""/></div>
-<div><label>Localisation</label><input name="location" placeholder="Cabo Negro / Mohammedia ..."/></div>
+<div><label>Localisation</label><input name="location" placeholder="Cabo Negro..."/></div>
 </div>
 <div style="margin-top:8px"><label>Détails de la propriété *</label><textarea name="details" placeholder="Type, surface, chambres, état..." required=""></textarea></div>
 <div style="display:flex;gap:12px;flex-wrap:wrap;margin-top:12px">
@@ -615,7 +615,7 @@ footer{background:var(--ccn-night); color:white}
 </form>
 <div class="card">
 <h3>Contactez‑nous directement</h3>
-<p>WhatsApp : <a class="wa-link" href="https://wa.me/212665889233" target="_blank">+212 665 889 233 ↗</a><br/> Email : <a href="mailto:conciergerieCabo Negro@gmail.com">conciergerieCabo Negro@gmail.com</a><br/> Localisation : Cabo Negro Eco‑City, Maroc</p>
+<p>WhatsApp : <a class="wa-link" href="https://wa.me/212665889233" target="_blank">+212 665 889 233 ↗</a><br/> Email : <a href="mailto:conciergeriecabonegro@gmail.com">conciergeriecabonegro@gmail.com</a><br/> Localisation : Cabo Negro, Maroc</p>
 <h3>Pourquoi nous choisir ?</h3>
 <ul>
 <li>Service familial de confiance</li>
